cmake_minimum_required(VERSION 2.6)
project(vif-tools)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/../cmake")
find_package(vif)

add_subdirectory(catinfo)
add_subdirectory(findsrc)
add_subdirectory(fitstool)
add_subdirectory(getgal)
add_subdirectory(imgtool)
add_subdirectory(photinfo)
add_subdirectory(psffit)
add_subdirectory(qconvol)
add_subdirectory(qaper)
add_subdirectory(qmask)
add_subdirectory(qregrid)
add_subdirectory(qstack2)
add_subdirectory(qxmatch2)
add_subdirectory(subsrc)
add_subdirectory(fluxcube)
add_subdirectory(randsrc)
add_subdirectory(radec2pix)
add_subdirectory(sex2deg)
add_subdirectory(deg2sex)
add_subdirectory(angcorrel)
add_subdirectory(fits2ascii)
add_subdirectory(pixfit)
